@@ -1237,6 +1237,9 @@ ACKNOWLEDGEMENTS
 AUTHOR
     Marc Mims <marc@questright.com>
 
+CONTRIBUTORS
+    Roberto Etcheverry
+
 LICENSE
     Copyright (c) 2009 Marc Mims
 
