@@ -576,6 +576,10 @@ implementation questions, especially with regards to Moose.
 
 Marc Mims <marc@questright.com>
 
+=head1 CONTRIBUTORS
+
+Roberto Etcheverry
+
 =head1 LICENSE
 
 Copyright (c) 2009 Marc Mims
